@@ -64,7 +64,7 @@ END
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 1,0,8,0
+ FILEVERSION 1,0,9,0
  PRODUCTVERSION 1,1,2,0
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
@@ -82,7 +82,7 @@ BEGIN
         BEGIN
             VALUE "CompanyName", "Lord KiRon"
             VALUE "FileDescription", "FB2Epub shell extension"
-            VALUE "FileVersion", "1.0.8.0"
+            VALUE "FileVersion", "1.0.9.0"
             VALUE "InternalName", "Fb2EpubExt.dll"
             VALUE "LegalCopyright", "CopyFree 2010"
             VALUE "OriginalFilename", "Fb2EpubExt.dll"
