@@ -1,5 +1,7 @@
 ﻿1.1.4
 * Fixed installer problem on x86 systems downloading VCRedist x86 twice
+* The shell extension no longer looks for a converter path, as it's a COM object now
+* Returned registration of shell extension for 32 bit programs on 64 bit machine that was broken in prev. version
 
 
 1.1.3
